--- a/task1/package.json
+++ b/task1/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\" \"cd backend && nodemon ./server.js\"",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "backend": "cd backend && nodemon ./server.js",
+    "dev:full": "concurrently \"npm run dev\" \"npm run backend\"",
+    "start:full": "concurrently \"npm run start\" \"npm run backend\""
   },
   "dependencies": {
     "next": "16.0.8",
@@ -18,6 +21,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^8.2.2",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
     "tailwindcss": "^4",
