--- a/task1/backend/package.json
+++ b/task1/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "node-js": "^1.0.0",
     "nodemon": "^3.1.11",
     "socket.io": "^4.8.1"
