--- a/task4/app/scripts/package.json
+++ b/task4/app/scripts/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "http": "^0.0.1-security",
-    "http-proxy": "^1.18.1"
+    "http-proxy": "^1.18.1",
+    "nodemon": "^3.1.11"
   }
 }
